test/core/errors/templates_error/zs/templatable_not_a_template_error.zs
package templatable_not_a_template_error;

struct Templatable
{
    uint32 value;
};

struct TemplatableNotATemplate
{
    Templatable<uint32> value;
};
